# src/dto/bookCollection.dto.ts
@@ -1,9 +1,10 @@
-import { Book } from "../models/book.model";
+
+import { BookDTO } from "./book.dto";
 
 export interface BookCollectionDTO {
     id?: number;
     book_id: number;
     available: number;
     state: number;
-    book?: Book;
+    book?: BookDTO;
 }
